did math to find nearby buses and listed them for user

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,26 +1,30 @@
-<div class="well">
 <p id="notice"><%= notice %></p>
 
+<h1>Your Escape Bus!</h1>
+
+<h3 class="text-muted">Your Current Location</h3>
 <p>
-  <strong>Street address:</strong>
-  <%= @location.street_address %>
+  <strong>Address:</strong>
+  <%= @location.full_street_address %>
+  <%= link_to 'Edit your location', edit_location_path(@location) %>
 </p>
 
-<p>
-  <strong>City:</strong>
-  <%= @location.city %>
-</p>
+<h3>Closest Buses</h3>
+
 
 <p>
-  <strong>Latitude:</strong>
-  <%= @location.latitude %>
+<!-- do doesnt do anything if @buses is empty -->
+<% @buses.each do |bus| %>
+  <strong>Route:</strong> <%= bus["ROUTE"] %> <%= bus["DIRECTION"] %><br>
+  <strong>Bus Number:</strong> <%= bus["VEHICLE"] %><br>
+  <strong>Next Stop:</strong> <%= bus["TIMEPOINT"] %><br><br>
+<% end %>
 </p>
 
-<p>
-  <strong>Longitude:</strong>
-  <%= @location.longitude %>
+<% if @buses.empty? %>
+<p>No buses so... or
+<%= link_to 'Edit your location', edit_location_path(@location) %>
 </p>
+<% end %>
 
-<%= link_to 'Edit', edit_location_path(@location) %> |
-<%= link_to 'Back', locations_path %>
-</div>
+
