attempts at homework

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,7 @@
 @import "font-awesome";
 
 body {
-  color: rebeccapurple;
+  padding-top:40px;
+  color: midnightblue;
+  font-family: 'Josefin Sans', sans-serif;
 }
