--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Location</h1>
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+    <div class="text-center"><i class="fa fa-bus fa-4x text-center"></i></div>
+    <h1>Edit Your Location</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', @location %> |
-<%= link_to 'Back', locations_path %>
+    <%= link_to 'Show', @location %> |
+    <%= link_to 'Back', locations_path %>
+    </div>
+  <div class="col-sm-2"></div>
+</div>
