--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Location</h1>
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+    <div class="text-center"><i class="fa fa-bus fa-4x text-center"></i></div>
+    <p id="notice"><%= notice %></p>
+    <h1>New Location</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', locations_path %>
+    <%= link_to 'Back', locations_path %>
+    </div>
+  <div class="col-sm-2"></div>
+</div>
