--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,30 +1,38 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+    <div class="text-center"><i class="fa fa-bus fa-4x text-center"></i></div>
+    <p id="notice"><%= notice %></p>
 
-<h1>Your Escape Bus!</h1>
+    <h1>Your Escape Bus!</h1>
 
-<h3 class="text-muted">Your Current Location</h3>
-<p>
-  <strong>Address:</strong>
-  <%= @location.full_street_address %>
-  <%= link_to 'Edit your location', edit_location_path(@location) %>
-</p>
+    <h3 class="text-muted">Your Current Location</h3>
+    <p class="text-muted">
+      <strong>Address:</strong>
+      <%= @location.full_street_address %>
+      <%= link_to 'Edit your location.', edit_location_path(@location) %>
+    </p>
 
-<h3>Closest Buses</h3>
+    <h3>Closest Buses</h3>
 
 
-<p>
-<!-- do doesnt do anything if @buses is empty -->
-<% @buses.each do |bus| %>
-  <strong>Route:</strong> <%= bus["ROUTE"] %> <%= bus["DIRECTION"] %><br>
-  <strong>Bus Number:</strong> <%= bus["VEHICLE"] %><br>
-  <strong>Next Stop:</strong> <%= bus["TIMEPOINT"] %><br><br>
-<% end %>
-</p>
+    <p>
+    <!-- do doesnt do anything if @buses is empty -->
+    <% @buses.each do |bus| %>
+      <strong>Route:</strong> <%= bus["ROUTE"] %> <%= bus["DIRECTION"] %><br>
+      <strong>Bus Number:</strong> <%= bus["VEHICLE"] %><br>
+      <strong>Next Stop:</strong> <%= bus["TIMEPOINT"] %><br><br>
+    <% end %>
+    </p>
 
-<% if @buses.empty? %>
-<p>No buses so... or
-<%= link_to 'Edit your location', edit_location_path(@location) %>
-</p>
-<% end %>
+    <% if @buses.empty? %>
+      <!-- <p>Needs to go back to edit</p> -->
+      <% #redirect_to edit_location_path.find(params[:id])  %>
+      <p>Not really that close. Time to walk, bike, taxi, Uber, or <%= link_to 'Edit your location', edit_location_path(@location) %>.</p>
+    <% end %>
+   </div>
+  <div class="col-sm-2"></div>
+</div>
+
 
 
