added map and markers to show view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,10 @@ body {
   color: midnightblue;
   font-family: 'Josefin Sans', sans-serif;
 }
+
+#map {
+  height: 500px;
+  width: 500px;
+  margin: 0;
+  padding: 0;
+}
