--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -3,7 +3,7 @@
   <div class="col-sm-8">
     <div class="text-center"><i class="fa fa-bus fa-4x text-center"></i></div>
     <p id="notice"><%= notice %></p>
-    <h1>New Location</h1>
+    <h1>Find a Bus</h1>
 
     <%= render 'form' %>
 
