--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -5,6 +5,7 @@
     <p id="notice"><%= notice %></p>
 
     <h1>Your Escape Bus!</h1>
+    <div id="map"></div>
 
     <h3 class="text-muted">Your Current Location</h3>
     <p class="text-muted">
@@ -14,8 +15,6 @@
     </p>
 
     <h3>Closest Buses</h3>
-
-
     <p>
     <!-- do doesnt do anything if @buses is empty -->
     <% @buses.each do |bus| %>
@@ -33,6 +32,49 @@
    </div>
   <div class="col-sm-2"></div>
 </div>
+
+  <script>
+    //changed google's code by creating mapOptions
+    // set variable = to users lat/long
+      var map, mapOptions;
+      function initMap() {
+        var userLatLng = {
+          lat: <%= @location.latitude %>,
+          lng: <%= @location.longitude %>
+        };
+        // converts ruby to json/javascript
+        var nearbyBuses = <%= raw @buses.to_json %>
+
+        mapOptions = {
+          center: userLatLng,
+          zoom: 15
+        }
+        map = new google.maps.Map(document.getElementById('map'), mapOptions);
+        var userMarker = new google.maps.Marker({
+          position: userLatLng,
+          map: map,
+          animation: google.maps.Animation.DROP,
+          title: 'You Are Here'
+        });
+
+      nearbyBuses.forEach(function (element){
+      var busLatLng = new google.maps.LatLng(element['LATITUDE'], element['LONGITUDE']);
+
+      var busMarker = new google.maps.Marker({
+        position: busLatLng,
+        map: map,
+        animation: google.maps.Animation.DROP,
+        title: element['ROUTE']
+        });
+      });
+
+      }
+    </script>
+
+
+<script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['google_maps_api_key'] %>&callback=initMap">
+</script>
 
 
 
