added map markers and finished various styling and text changes

--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -3,11 +3,11 @@
   <div class="col-sm-8">
     <div class="text-center"><i class="fa fa-bus fa-4x text-center"></i></div>
     <p id="notice"><%= notice %></p>
-    <h1>Find a Bus</h1>
 
+    <h1>Find a MARTA Bus</h1>
+    <p>Enter your current location in Atlanta, GA, to find nearby MARTA buses.</p>
     <%= render 'form' %>
 
-    <%= link_to 'Back', locations_path %>
     </div>
   <div class="col-sm-2"></div>
 </div>
