--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,9 +8,18 @@ body {
   font-family: 'Josefin Sans', sans-serif;
 }
 
+#notice {
+  font-size: 1.5em;
+  padding-top:10px;
+}
+
 #map {
   height: 500px;
   width: 500px;
   margin: 0;
   padding: 0;
+}
+
+.busMapBox {
+  font-family: 'Josefin Sans', sans-serif;
 }
