--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -5,7 +5,7 @@
     <p id="notice"><%= notice %></p>
 
     <h1>Find a MARTA Bus</h1>
-    <p>Enter your current location in Atlanta, GA, to find nearby MARTA buses.</p>
+    <p>Enter your current location in Atlanta, GA to find nearby MARTA buses.</p>
     <%= render 'form' %>
 
     </div>
